jpeterson-dev-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jpeterson-dev-depl
  namespace: default
  labels:
    app: jpeterson-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jpeterson-dev
  template:
    metadata:
      labels:
        app: jpeterson-dev
    spec:
      containers:
      - name: jpeterson-dev
        image: registry.jakepeterson.dev/jpetersondev/portfolio
        ports:
        - containerPort: 4000
      imagePullSecrets:
      - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: jpdev-svc
spec:
  selector:
    app: jpeterson-dev
  ports:
    - protocol: TCP
      port: 4000  
      targetPort: 4000
