service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jpeterson-dev-service
spec:
  type: NodePort
  selector:
    app: jpeterson-dev
  ports:
  - protocol: TCP
    port: 4000
